feat: AWS Bedrock 챗봇 구현 완료
- chatbot_service.py: Bedrock Claude 3 연동 서비스 추가
- welfare_service_api.py: /api/v1/chat 챗봇 엔드포인트 추가
- consultation/page.tsx: 실제 백엔드 API와 연동
- requirements.txt: boto3 기반으로 변경 (langchain 제거)
- .env.example: AWS 설정 예시 추가

🤖 실시간 RDS 복지 서비스 검색 + AWS Bedrock Claude 상담
🔧 IAM Role 기반 인증, us-east-1 리전 사용

--- a/.env.example
+++ b/.env.example
@@ -29,3 +29,17 @@ DATABASE_URL=
 # (선택사항) 해외 복지 서비스 정보를 가져올 외부 API 키
 # 실제 API를 찾기 전까지는 비워둡니다.
 OVERSEAS_WELFARE_API_KEY=
+
+# --- AWS 설정 (Bedrock 챗봇용) ---
+
+# AWS 액세스 키 (Bedrock Claude 모델 사용)
+AWS_ACCESS_KEY_ID=
+AWS_SECRET_ACCESS_KEY=
+AWS_DEFAULT_REGION=us-west-2
+
+# PostgreSQL 데이터베이스 (복지 서비스 검색)
+DB_HOST=seoul-ht-11.cpk0oamsu0g6.us-west-1.rds.amazonaws.com
+DB_PORT=5432
+DB_NAME=postgres
+DB_USER=postgres
+DB_PASSWORD=yeardream11!!
