--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -6,7 +6,9 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "dev:full": "concurrently \"cd ../.. && pyenv activate project && python src/backend/welfare_service_api.py\" \"npm run dev\"",
+    "start:full": "concurrently \"cd ../.. && pyenv activate project && python src/backend/welfare_service_api.py\" \"npm start\""
   },
   "dependencies": {
     "@playwright/test": "^1.55.0",
@@ -38,6 +40,7 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
+    "concurrently": "^9.2.1",
     "eslint": "^8",
     "eslint-config-next": "14.0.4",
     "postcss": "^8",
