chore: use LFS for large outputs

--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,3 @@
 src/modules/data_analysis/risk_scoring/telecom_group_monthly_all_with_preds.csv filter=lfs diff=lfs merge=lfs -text
+src/modules/data_analysis/risk_scoring/out/risk_flags.csv filter=lfs diff=lfs merge=lfs -text
+src/modules/data_analysis/risk_scoring/out/rag_risk.jsonl filter=lfs diff=lfs merge=lfs -text
